@@ -3,21 +3,25 @@
 # what file/data formats to use for metadata
 #
 # choices:
-#    serializer_yaml (default & recommended)
-#    serializer_shelve (experimental, bsddb based)
+#    serializer_catalog (fast, uses .d directories in /var/lib/cobbler/config)
+#    serializer_yaml (original serializer, uses a few text files)
+#    serializer_shelve (fast but experimental, bsddb based)
 #
-# NOTE: in 99% of all installations, users should NOT change this setting
-# migration between formats requires usage of "cobbler replicate"
+# for 99% or more of all installations, use serializer_catalog.
+#
+# NOTE:  serializer changes may remove your ability to access old data.
+# serializer_yaml users can change to serializer_catalog w/o manual 
+# migration steps.  Other changes are for new installs only.
 
 [serializers]
-settings = serializer_yaml
-distro = serializer_yaml
-profile = serializer_yaml
-system = serializer_yaml
-repo = serializer_yaml
-image = serializer_yaml
+settings = serializer_catalog
+distro = serializer_catalog
+profile = serializer_catalog
+system = serializer_catalog
+repo = serializer_catalog
+image = serializer_catalog
 
-# what users can log into the WebUI and Read-Write XMLRPC?
+# policy: what users can log into the WebUI and Read-Write XMLRPC?
 #
 # choices:
 #    authn_denyall    -- no one (default)
@@ -39,7 +43,7 @@ image = serializer_yaml
 [authentication]
 module = authn_denyall
 
-# once a user has been cleared by the WebUI/XMLRPC, what can they do?
+# policy: once a user has been cleared by the WebUI/XMLRPC, what can they do?
 #
 # choices:
 #    authz_allowall   -- full access for all authneticated users (default)
